...
        TabView(selection: self.$selection) {
            NavigationStack {
                HomeView()
            }
            .tabItem {
                Image(systemName: "house.fill")
                Text("Home")
            }
            .tag(0)

            Text("Activities")
                .tabItem {
                    Image(systemName: "waveform.path.ecg")
                    Text("Activities")
                }
                .tag(1)

...
